--- a/index.html
+++ b/index.html
@@ -6,20 +6,20 @@
 	<title>Feel A Little</title>
 	
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-	<link href="/css/materialize.min.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-	<link href="/css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+	<link href="css/materialize.min.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+	<link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 </head>
 <body>
 	<div class="section no-pad-bot">
 		<div class="valign-wrapper splash">
 			<div class="container valign">
 				<div class="row center">
-					<img src="/img/Feel-A-Little-Splash.jpg" alt="Feel A Little" class="splash">
+					<img src="img/Feel-A-Little-Splash.jpg" alt="Feel A Little" class="splash">
 				</div>
 			
 				<div class="row center">
 					<a href="https://www.facebook.com/feelalittle" class="">
-						<img src="/img/Feel-A-Little-Facebook-Button.jpg" alt="Feel A Little on Facebook">
+						<img src="img/Feel-A-Little-Facebook-Button.jpg" alt="Feel A Little on Facebook">
 					</a>
 				</div>
 			</div>
