Remove valuing, responsive images

--- a/index.html
+++ b/index.html
@@ -10,18 +10,16 @@
 	<link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 </head>
 <body>
-	<div class="section no-pad-bot">
-		<div class="valign-wrapper splash">
-			<div class="container valign">
-				<div class="row center">
-					<img src="img/Feel-A-Little-Splash.jpg" alt="Feel A Little" class="splash">
-				</div>
-			
-				<div class="row center">
-					<a href="https://www.facebook.com/feelalittle" class="">
-						<img src="img/Feel-A-Little-Facebook-Button.jpg" alt="Feel A Little on Facebook">
-					</a>
-				</div>
+	<div class="section">
+		<div class="container">
+			<div class="row center">
+				<img src="img/Feel-A-Little-Splash.jpg" alt="Feel A Little" class="splash responsive-img">
+			</div>
+		
+			<div class="row center">
+				<a href="https://www.facebook.com/feelalittle" class="responsive-img">
+					<img src="img/Feel-A-Little-Facebook-Button.jpg" alt="Feel A Little on Facebook">
+				</a>
 			</div>
 		</div>
     </div>
