--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			</div>
 		
 			<div class="row center">
-				<a href="https://www.facebook.com/feelalittle" class="responsive-img">
+				<a href="https://www.facebook.com/feelalittle" class="facebook responsive-img">
 					<img src="img/Feel-A-Little-Facebook-Button.jpg" alt="Feel A Little on Facebook">
 				</a>
 			</div>
