--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 			</div>
 		
 			<div class="row center">
-				<a href="https://www.facebook.com/feelalittle" class="facebook responsive-img">
-					<img src="img/Feel-A-Little-Facebook-Button.jpg" alt="Feel A Little on Facebook">
+				<a href="https://www.facebook.com/feelalittle">
+					<img src="img/Feel-A-Little-Facebook-Button.jpg" alt="Feel A Little on Facebook" class="responsive-img">
 				</a>
 			</div>
 		</div>
